--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11994,10 +11994,17 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   min-height: 100vh;
+  background-attachment: fixed;
 }
 
 #root {
-  height: 94.2vh;
+  height: 94.5vh;
+}
+@media only screen and (max-width: 1200px) {
+  #root {
+    min-height: auto;
+    height: 100%;
+  }
 }
 
 ol, ul, dl {
@@ -12033,6 +12040,11 @@ li {
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   width: 100%;
+}
+@media only screen and (max-width: 1200px) {
+  .ligi_list {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 .ligi_content {
   flex-direction: column;
